--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <div class="jumbotron">
-	<h1><i class="fa fa-bomb"></i><i class="fa fa-bomb"></i><i class="fa fa-bomb"></i></h1>
+	<h1><i class="fa fa-bomb"></i><i class="fa fa-bomb"></i><i class="fa fa-bomb"></i>...</h1>
 	<p>Blah blah blah</p>
-	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+	<% if !current_user %>
+		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	<% end %>
 </div>
