--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,6 +6,7 @@
   	<%= f.input :description %>
   	<%= f.input :due_date %>
     <%= f.input :content %>
+    <%= f.association :project %>
   </div>
 
   <div class="form-actions">
